Update file terbaru

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="short icon" href="image/short_icon1.png">
 </head>
-<body>
+<div>
 
     <section id="Home">
 
@@ -76,11 +76,11 @@
                 <h3>Kenapa harus peyek ?</h3>
                 <p>
                     Rempeyek, atau sering disebut peyek, adalah camilan tradisional khas Yogyakarta yang renyah dan gurih.
-Camilan ini dibuat dari adonan tepung beras yang dicampur dengan bumbu seperti bawang putih, ketumbar, daun jeruk, dan garam untuk memberikan rasa khas yang gurih.
+                    camilan ini dibuat dari adonan tepung beras yang dicampur dengan bumbu seperti bawang putih, ketumbar, daun jeruk, dan garam untuk memberikan rasa khas yang gurih.
 
 
                 </p>
-
+            
                 <div class="about_services">
 
                     <div class="s_1">
@@ -207,14 +207,14 @@ Camilan ini dibuat dari adonan tepung beras yang dicampur dengan bumbu seperti b
 
                     <a href="#" class="menu_btn"><i class=""></i>Order Now</a>
 
+                    </div>
+
                 </div>
 
             </div>
 
-        </div>
-
+         </div>
     </div>
-
 
 
 
@@ -428,7 +428,7 @@ Camilan ini dibuat dari adonan tepung beras yang dicampur dengan bumbu seperti b
                     </div>
 
                     <h3 class="blog_heading">
-                        Minimal sekali seumur hidup harus cobain ramen kita
+                        Minimal sekali seumur hidup harus cobain rempeyek kita guyss
                     </h3>
 
                     <p class="blog_text">
@@ -567,7 +567,7 @@ Camilan ini dibuat dari adonan tepung beras yang dicampur dengan bumbu seperti b
                         <input type="number" placeholder="+62 838 7794 8476">
 
                         <p>Extra food</p>
-                        <input type="text" placeholder="with cola">
+                        <input type="text" placeholder="">
 
                         <p>You Address</p>
                         <textarea placeholder="Enter You Address"></textarea>
@@ -659,7 +659,7 @@ Camilan ini dibuat dari adonan tepung beras yang dicampur dengan bumbu seperti b
 
         </div>
 
-        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> Putra Ganteng/span></p>
+        <p class="end">Design by<span><i class="fa-solid fa-face-grin"></i> Putra Ganteng</p>
 
     </footer>
 
